fixed a small issue with z-index

--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -6,6 +6,7 @@
 	width: 100%;
 	align-items: center;
 	justify-content: space-evenly;
+	z-index: 1;
 }
 
 .section-left, .section-right {
