--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: row;
 	gap: 1rem;
+	z-index: 2;
 }
 
 .nav_button {
